Fix language feature for matchDetection

--- a/test-fixtures/match-detection/features/bib/language/06/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/06/metadata.json
@@ -1,8 +1,8 @@
 {
-  "description": "Should extract language from 041 (||| in 008)",
+  "description": "Should not extract language if there's no f008 or f041",
   "feature": "language",
   "type": "extract",
-  "expectedFeatures": ["fin"],
+  "expectedFeatures": [],
   "inputRecord": {
     "leader": "02518cam a2200745zi 4500",
     "fields": [
@@ -10,18 +10,14 @@
         "tag": "001",
         "value": "000019643"
       },
-      {
-        "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
-      },
-      {
-        "tag": "041",
+            {
+        "tag": "035",
         "ind1": "0",
         "ind2": " ",
         "subfields": [
           {
             "code": "a",
-            "value": "fin"
+            "value": "xxx"
           }
         ]
       }
