--- a/test-fixtures/match-detection/features/bib/language/08/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/08/metadata.json
@@ -1,5 +1,5 @@
 {
-  "description": "Should extract language from 041 (||| in 008)",
+  "description": "Should extract the common language in 008 and 041",
   "feature": "language",
   "type": "extract",
   "expectedFeatures": ["fin"],
@@ -12,13 +12,17 @@
       },
       {
         "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
+        "value": "831017s1983    fi ||||||||||||||||bfin||"
       },
       {
         "tag": "041",
         "ind1": "0",
         "ind2": " ",
         "subfields": [
+          {
+            "code": "a",
+            "value": "eng"
+          },
           {
             "code": "a",
             "value": "fin"
