--- a/test-fixtures/match-detection/features/bib/language/09/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/09/metadata.json
@@ -1,8 +1,8 @@
 {
-  "description": "Should extract language from 041 (||| in 008)",
+  "description": "Should not extract language if there are both 008 and 041 and they do not have a common language",
   "feature": "language",
   "type": "extract",
-  "expectedFeatures": ["fin"],
+  "expectedFeatures": [],
   "inputRecord": {
     "leader": "02518cam a2200745zi 4500",
     "fields": [
@@ -12,7 +12,7 @@
       },
       {
         "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
+        "value": "831017s1983    fi ||||||||||||||||bfin||"
       },
       {
         "tag": "041",
@@ -21,7 +21,11 @@
         "subfields": [
           {
             "code": "a",
-            "value": "fin"
+            "value": "eng"
+          },
+          {
+            "code": "a",
+            "value": "swe"
           }
         ]
       }
