--- a/test-fixtures/match-detection/features/bib/language/10/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/10/metadata.json
@@ -1,5 +1,5 @@
 {
-  "description": "Should extract language from 041 (||| in 008)",
+  "description": "Should extract language from 041 (^^^ in f008)",
   "feature": "language",
   "type": "extract",
   "expectedFeatures": ["fin"],
@@ -12,7 +12,7 @@
       },
       {
         "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
+        "value": "831017s1983    fi ||||||||||||||||b^^^||"
       },
       {
         "tag": "041",
