--- a/test-fixtures/match-detection/features/bib/language/12/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/12/metadata.json
@@ -1,5 +1,5 @@
 {
-  "description": "Should extract language from 041 (||| in 008)",
+  "description": "Should extract language from 041 (no f008)",
   "feature": "language",
   "type": "extract",
   "expectedFeatures": ["fin"],
@@ -9,10 +9,6 @@
       {
         "tag": "001",
         "value": "000019643"
-      },
-      {
-        "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
       },
       {
         "tag": "041",
