--- a/test-fixtures/match-detection/features/bib/language/03/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/03/metadata.json
@@ -1,5 +1,6 @@
 {
-  "description": "Should extract language from 008",
+  "description": "Should extract language from 008 (DEPRECATED! Remove or replace eventually!)",
+  "skip": true,
   "feature": "language",
   "type": "extract",
   "expectedFeatures": ["fin"],
