--- a/test-fixtures/match-detection/features/bib/language/09/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/09/metadata.json
@@ -1,5 +1,6 @@
 {
-  "description": "Should extract all languages and sort them",
+  "description": "Should extract all languages and sort them (DEPRECATED! Remove eventually!)",
+  "skip": true,
   "feature": "language",
   "type": "extract",
   "expectedFeatures": ["eng", "fin", "swe"],
