--- a/test-fixtures/match-detection/features/bib/language/14/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/14/metadata.json
@@ -1,5 +1,6 @@
 {
-  "description": "Should not extract language from 041 if the language code is not MARC 21 (ind2 is not ' ') ",
+  "description": "Should not extract language from 041 if the language code is not MARC 21 (ind2 is not ' ') (DEPRECATED! Remove eventually!)",
+  "skip": true,
   "feature": "language",
   "type": "extract",
   "expectedFeatures": [
