--- a/test-fixtures/match-detection/features/bib/language/19/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/19/metadata.json
@@ -1,32 +1,32 @@
 {
-  "description": "Should not extract non-valid language from 041 (||| in 008)",
+  "description": "Compare differently structured 041 fields with the same data. Should return points.",
   "feature": "language",
-  "type": "extract",
-  "expectedFeatures": [],
-  "inputRecord": {
-    "leader": "02518cam a2200745zi 4500",
+  "type": "compare",
+  "expectedPoints": 0.1,
+
+    "featuresA": [{
     "fields": [
-      {
-        "tag": "001",
-        "value": "000019643"
-      },
-      {
-        "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
-      },
-      {
-        "tag": "041",
-        "ind1": "0",
-        "ind2": " ",
-        "subfields": [
-          {
-            "code": "a",
-            "value": "!x!"
-          }
-        ]
-      }
+      {"tag": "041", "ind1": " ", "ind2": " ", "subfields": [
+        {"code": "a", "value": "eng"}
+      ]},
+      {"tag": "041", "ind1": " ", "ind2": " ", "subfields": [
+        {"code": "a", "value": "swe"}
+      ]},
+      {"tag": "041", "ind1": " ", "ind2": " ", "subfields": [
+        {"code": "a", "value": "fin"}
+      ]}
     ]
-  },
-  "skip": true,
+  }, "A"],
+  "featuresB": [{
+    "fields": [
+      {"tag": "041", "ind1": " ", "ind2": " ", "subfields": [
+        {"code": "a", "value": "eng"},
+        {"code": "a", "value": "fin"},
+        {"code": "a", "value": "swe"}
+      ]}
+
+    ]
+  }, "B"],
+  "skip": false,
   "only": false
 }
