Replace test: test 'und' vs normal language code (spoiler: results in no bonus nor penalty)

--- a/test-fixtures/match-detection/features/bib/language/14/metadata.json
+++ b/test-fixtures/match-detection/features/bib/language/14/metadata.json
@@ -1,48 +1,24 @@
 {
-  "description": "Should not extract language from 041 if the language code is not MARC 21 (ind2 is not ' ') (DEPRECATED! Remove eventually!)",
-  "skip": true,
+  "description": "ind1 check: '#' does not incur in penalty. 'und' vs 'eng' is fine (no points nor penalty for that)",
   "feature": "language",
-  "type": "extract",
-  "expectedFeatures": [
-    "swe"
-  ],
-  "inputRecord": {
-    "leader": "02518cam a2200745zi 4500",
+  "type": "compare",
+  "expectedPoints": 0.0,
+
+    "featuresA": [{
     "fields": [
-      {
-        "tag": "001",
-        "value": "000019643"
-      },
-      {
-        "tag": "008",
-        "value": "831017s1983    fi ||||||||||||||||b|||||"
-      },
-      {
-        "tag": "041",
-        "ind1": "0",
-        "ind2": "7",
-        "subfields": [
-          {
-            "code": "a",
-            "value": "foob"
-          },
-          {
-            "code": "2",
-            "value": "bar"
-          }
-        ]
-      },
-      {
-        "tag": "041",
-        "ind1": "0",
-        "ind2": " ",
-        "subfields": [
-          {
-            "code": "d",
-            "value": "swe"
-          }
-        ]
-      }
+      {"tag": "041", "ind1": " ", "ind2": " ", "subfields": [
+        {"code": "a", "value": "und"}
+      ]}
     ]
-  }
+  }, "A"],
+  "featuresB": [{
+    "fields": [
+      {"tag": "041", "ind1": "0", "ind2": " ", "subfields": [
+        {"code": "a", "value": "eng"}
+      ]}
+
+    ]
+  }, "B"],
+  "skip": false,
+  "only": false
 }
